// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/ProfilePicture should match snapshot, no user specified, default props 1`] = `
<span
  className="status-wrapper style--none"
>
  <span
    className="profile-icon "
  >
    <Memo(Avatar)
      size="md"
      url="http://example.com/image.png"
    />
  </span>
  <Memo(StatusIcon)
    status="away"
  />
</span>
`;

exports[`components/ProfilePicture should match snapshot, no user specified, overridden props 1`] = `
<span
  className="status-wrapper style--none"
>
  <span
    className="profile-icon "
  >
    <Memo(Avatar)
      size="xl"
      url="http://example.com/image.png"
    />
  </span>
  <Memo(StatusIcon)
    status="away"
  />
</span>
`;

exports[`components/ProfilePicture should match snapshot, profile and src, default props 1`] = `
<ProfilePopoverController
  src="http://example.com/image.png"
  triggerComponentClass="status-wrapper"
  userId="uid"
>
  <RoundButton
    className="style--none"
    size="md"
  >
    <span
      className="profile-icon "
    >
      <Memo(Avatar)
        url="http://example.com/emoji.png"
      />
    </span>
  </RoundButton>
  <Memo(StatusIcon)
    status="away"
  />
</ProfilePopoverController>
`;

exports[`components/ProfilePicture should match snapshot, user specified 1`] = `
<span
  className="status-wrapper style--none"
>
  <span
    className="profile-icon "
  >
    <Memo(Avatar)
      size="md"
      url="http://example.com/image.png"
    />
  </span>
  <Memo(StatusIcon)
    status="away"
  />
</span>
`;

exports[`components/ProfilePicture should match snapshot, user specified, overridden props 1`] = `
<span
  className="status-wrapper style--none"
>
  <span
    className="profile-icon "
  >
    <Memo(Avatar)
      size="xs"
      url="http://example.com/image.png"
    />
  </span>
  <Memo(StatusIcon)
    status="away"
  />
</span>
`;
